--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/server.ts",
-    "lint": "tslint -p tsconfig.json -c tslint.json"
+    "dev": "nodemon ./src/server.ts"
   },
   "keywords": [],
   "author": "Ta7a",
@@ -27,6 +26,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "redis": "^4.6.5",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -37,9 +37,8 @@
     "@types/node": "^18.14.1",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "@types/redis": "^4.0.11",
     "nodemon": "^2.0.20",
-    "tslint": "^6.1.3",
-    "tslint-config-airbnb": "^5.11.2",
     "typescript": "^4.9.5"
   }
 }
