--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/server.ts"
+    "dev": "nodemon ./src/server.ts",
+    "build": "rimraf ./dist && tsc"
   },
   "keywords": [],
   "author": "Ta7a",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.17",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
@@ -32,12 +34,10 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.1",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
-    "@types/redis": "^4.0.11",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.5"
   }
